--- a/PlanIFTicateur/src/PlanIFTicateur/gui/frames/MainWindow.form
+++ b/PlanIFTicateur/src/PlanIFTicateur/gui/frames/MainWindow.form
@@ -13,7 +13,7 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="nouveauMenuItem">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Nouveau"/>
+                <Property name="text" type="java.lang.String" value="Ouvrir"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nouveauMenuItemActionPerformed"/>
@@ -86,7 +86,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="mainPanel" alignment="0" pref="704" max="32767" attributes="0"/>
+          <Component id="mainPanel" alignment="0" pref="779" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -136,6 +136,14 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="verificationAutoBoutonActionPerformed"/>
               </Events>
             </Component>
+            <Component class="javax.swing.JButton" name="jButton1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Planification Automatique"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+              </Events>
+            </Component>
             <Component class="javax.swing.JButton" name="statistiquesBouton">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Statistiques"/>
@@ -154,7 +162,7 @@
             </Component>
             <Component class="javax.swing.JButton" name="reinitialiserBouton">
               <Properties>
-                <Property name="text" type="java.lang.String" value="R&#xe9;nitialiser"/>
+                <Property name="text" type="java.lang.String" value="R&#xe9;initialiser"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="reinitialiserBoutonActionPerformed"/>
@@ -245,7 +253,7 @@
                       <Layout>
                         <DimensionLayout dim="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <EmptySpace min="0" pref="686" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="765" max="32767" attributes="0"/>
                           </Group>
                         </DimensionLayout>
                         <DimensionLayout dim="1">
